--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X--UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework</title>   
+    <title>homework</title>
+    <link rel="stylesheet" href="styles.css">   
  </head> 
  <body>
+    <header class="header">
+        <nav class="nav">
+            <a href="" class="logo">
+                <img src="" alt="логотип WebStudio">
+            </a>
+            <ul class="menu">
+                <li class="menu-item">
+                    
+                </li>
+                <li class="menu-item"></li>
+                <li class="menu-item"></li>
+                <li class="menu-item"></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main class="main">
+        <section class="promo">
+            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        </section>
+        <section class="features">
+            <h2></h2>
+        </section>
+        <section class="about">
+            <h2>Чим ми займаємося</h2>
+        </section>
+        <section class="team">
+            <h2>Наша команда</h2>
+        </section>
+        
+
+
+    </main>
+    <footer class="footer">
+
+
+    </footer>
 
 
 
