--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
                 <img src="" alt="логотип WebStudio">
             </a>
             <ul class="menu">
-                <li class="menu-item">
-                    
+                <li class="menu-nav">
+                    <a href="#">Студія</a>
                 </li>
-                <li class="menu-item"></li>
-                <li class="menu-item"></li>
-                <li class="menu-item"></li>
+                <li class="menu-item">
+                    <a href="#">Портфоліо</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">Контакти</a>
+                </li>
             </ul>
+            <a class="phone" href="tel:+38 0961111111">+38 096 111 11 11</a>
+            <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </nav>
 
     </header>
