--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#">Контакти</a>
                 </li>
             </ul>
-            <a class="phone" href="tel:+38 0961111111">+38 096 111 11 11</a>
+            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
             <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </nav>
 
@@ -32,6 +32,7 @@
     <main class="main">
         <section class="promo">
             <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+            <button type="button">Замовити послугу</button>
         </section>
         <section class="features">
             <h2></h2>
