--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section class="features">
-            <h2></h2>
+            <span class="feature">
+                <h2 class="feature-h2-1">УВАГА ДО ДЕТАЛЕЙ</h2>
+                <p class="feature-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <h2 class="feauter-h2-2">ПУНКТУАЛЬНІСТЬ</h2>
+                <p class="feauter-p-2">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <h2 class="feauter-h2-3">ПЛАНУВАННЯ</h2>
+                <p class="feauter-p-3">Так само консультація з широким активом значною мірою зумовлює.</p>
+                <h2 class="feauter-h2-4">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <p class="featur-p-4">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </span>
+            
+            
+
         </section>
         <section class="about">
             <h2>Чим ми займаємося</h2>
