Наша команда - заготовка

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </section>
         <section class="about">
             <h2>Чим ми займаємося</h2>
+            <img 
+              src="img1.jpg"
+              alt="Людина пише верстку сайту>
+              width=""
         </section>
         <section class="team">
             <h2>Наша команда</h2>
