Виправив проблеми по Команді

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="uk">
  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X--UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework</title>
     <link rel="stylesheet" href="styles.css">   
@@ -87,59 +86,49 @@
         </section>
         <section class="team">
             <h2>Наша команда</h2>
-            <figure>
-                <ul>
-                    <li>
-                       <img
-                       src=""
-                       alt="Дизайнер продукту"
-                       width="270"
-                       height="260"
-                       />
-                       <figcaption>
-                        <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
-                       </figcaption>
-                    </li>
-                    <li>
-                        <img
-                        src=""
-                        alt="Розробник інтерфейсу"
-                        width="270"
-                        height="260"
-                        />
-                        <figcaption>
-                            <h3>Ольга Рєпіна</h3>
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img
-                        src=""
-                        alt="Маркетолог"
-                        width="270"
-                        height="260"
-                        />
-                        <figcaption>
-                            <h3>Микола Тарасов</h3>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img
-                        src=""
-                        alt="Дизайнер інтерфейсу користувача"
-                        width="270"
-                        height="260"
-                        />
-                        <figcaption>
-                            <h3>Михайло Єрмаков</h3>
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </li>
-
-                </ul>
-            </figure>
+            <ul>
+                <li>
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
+                    <img
+                    src=""
+                    alt="Дизайнер продукту"
+                    width=""
+                    height=""
+                    />
+                </li>
+                <li>
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                    <img
+                    src=""
+                    alt="Розробник інтерфейсу"
+                    width=""
+                    height=""
+                    />
+                </li>
+                <li>
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                    <img
+                    src=""
+                    alt="Маркетолог"
+                    width=""
+                    height=""
+                    />
+                </li>
+                <li>
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
+                    <img
+                    src=""
+                    alt="Дизайнер інтерфейсу користувача"
+                    width=""
+                    height=""
+                    />
+                </li>
+            </ul>
+          
         </section>
         
 
