--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section class="features">
-            <ul class="feature">
+            <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -88,44 +88,44 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
                     <img
                     src=""
                     alt="Дизайнер продукту"
                     width=""
                     height=""
                     />
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
                     <img
                     src=""
                     alt="Розробник інтерфейсу"
                     width=""
                     height=""
                     />
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
                     <img
                     src=""
                     alt="Маркетолог"
                     width=""
                     height=""
                     />
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
                     <img
                     src=""
                     alt="Дизайнер інтерфейсу користувача"
                     width=""
                     height=""
                     />
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
           
@@ -134,7 +134,7 @@
 
 
     </main>
-    <footer class="footer">
+    <footer>
 
 
     </footer>
