--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework</title>
+    <title>Студія</title>
     <link rel="stylesheet" href="styles.css">   
  </head> 
  <body>
     <header class="header">
         <nav class="nav">
             <a href="" class="logo">
-                <img src="" alt="логотип WebStudio">
+                <img src="./images/webstudio.jpg" alt="логотип WebStudio">
             </a>
             <ul class="menu">
                 <li class="menu-nav">
@@ -23,9 +23,9 @@
                     <a href="#">Контакти</a>
                 </li>
             </ul>
-            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
-            <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </nav>
+        <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 
     </header>
     <main class="main">
@@ -59,7 +59,7 @@
             <ul>
                 <li>
                     <img
-                    src=""
+                    src="./images/programer.jpg"
                     alt="Програміст пише верстку сайту"
                     width="370"
                     height="294"
@@ -67,7 +67,7 @@
                 </li>
                 <li>
                     <img
-                    src=""
+                    src="./images/web-ui.jpg"
                     alt="Програміст розробляє додаток на смартфон"
                     width="370"
                     height="294"
@@ -75,7 +75,7 @@
                 </li>
                 <li>
                     <img
-                    src=""
+                    src="./images/creative.jpg"
                     alt="Дизайнер розробляє логотип"
                     width="370"
                     height="294"
@@ -89,40 +89,40 @@
             <ul>
                 <li>
                     <img
-                    src=""
+                    src="./images/designer.jpg"
                     alt="Дизайнер продукту"
-                    width=""
-                    height=""
+                    width="270"
+                    height="260"
                     />
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img
-                    src=""
+                    src="./images/frontend.jpg"
                     alt="Розробник інтерфейсу"
-                    width=""
-                    height=""
+                    width="270"
+                    height="260"
                     />
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img
-                    src=""
+                    src="./images/marketing.jpg"
                     alt="Маркетолог"
-                    width=""
-                    height=""
+                    width="270"
+                    height="260"
                     />
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img
-                    src=""
+                    src="./images/ui.jpg"
                     alt="Дизайнер інтерфейсу користувача"
-                    width=""
-                    height=""
+                    width="270"
+                    height="260"
                     />
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
