--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <header class="header">
         <nav class="nav">
             <a href="" class="logo">
-                <img src="./images/webstudio.jpg" alt="логотип WebStudio">
+                <img
+                 src="./images/webstudio.jpg"
+                 alt="логотип WebStudio"
+                 width="145"
+                 />
+
             </a>
             <ul class="menu">
                 <li class="menu-nav">
@@ -72,6 +77,7 @@
                     width="370"
                     height="294"
                     />
+
                 </li>
                 <li>
                     <img
@@ -114,18 +120,7 @@
                     width="270"
                     height="260"
                     />
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img
-                    src="./images/ui.jpg"
-                    alt="Дизайнер інтерфейсу користувача"
-                    width="270"
-                    height="260"
-                    />
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+ 
                 </li>
             </ul>
           
@@ -135,6 +130,12 @@
 
     </main>
     <footer>
+        <a href="" class="logo">
+            <img src="./images/webstudio.jpg"
+            alt="Нижній логотип"
+            width="145"
+            />
+        </a>
 
 
     </footer>
@@ -144,3 +145,4 @@
 
  </body>
 </html>
+ 
