--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
             width="145"
             />
         </a>
+        <address>
+            м. Київ, пр-т Лесі Українки, 26
+        </address>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
 
 
     </footer>
