--- a/index.html
+++ b/index.html
@@ -1,155 +1,114 @@
 <!DOCTYPE html>
 <html lang="uk">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <link rel="stylesheet" href="styles.css">   
- </head> 
- <body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="header">
-        <nav class="nav">
-            <a href="" class="logo">
-                <img
-                 src="./images/webstudio.jpg"
-                 alt="логотип WebStudio"
-                 width="145"
-                 />
-
-            </a>
-            <ul class="menu">
-                <li class="menu-nav">
-                    <a href="#">Студія</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#">Портфоліо</a>
-                </li>
-                <li class="menu-item">
-                    <a href="#">Контакти</a>
-                </li>
-            </ul>
-        </nav>
-        <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-
+      <nav class="nav">
+        <a href="" class="logo">
+          <img src="./images/webstudio.jpg" alt="логотип WebStudio" width="145" />
+        </a>
+        <ul class="menu">
+          <li class="menu-nav">
+            <a href="#">Студія</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Портфоліо</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
     </header>
     <main class="main">
-        <section class="promo">
-            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button type="button">Замовити послугу</button>
-        </section>
-        <section class="features">
-            <ul>
-                <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-
-        </section>
-        <section class="about">
-            <h2>Чим ми займаємося</h2>
-            <ul>
-                <li>
-                    <img
-                    src="./images/programer.jpg"
-                    alt="Програміст пише верстку сайту"
-                    width="370"
-                    height="294"
-                    />
-                </li>
-                <li>
-                    <img
-                    src="./images/web-ui.jpg"
-                    alt="Програміст розробляє додаток на смартфон"
-                    width="370"
-                    height="294"
-                    />
-
-                </li>
-                <li>
-                    <img
-                    src="./images/creative.jpg"
-                    alt="Дизайнер розробляє логотип"
-                    width="370"
-                    height="294"
-                    />
-                </li>
-            </ul>
-
-        </section>
-        <section class="team">
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img
-                    src="./images/designer.jpg"
-                    alt="Дизайнер продукту"
-                    width="270"
-                    height="260"
-                    />
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img
-                    src="./images/frontend.jpg"
-                    alt="Розробник інтерфейсу"
-                    width="270"
-                    height="260"
-                    />
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img
-                    src="./images/marketing.jpg"
-                    alt="Маркетолог"
-                    width="270"
-                    height="260"
-                    />
- 
-                </li>
-            </ul>
-          
-        </section>
-        
-
-
+      <section class="promo">
+        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section class="features">
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="about">
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/programer.jpg"
+              alt="Програміст пише верстку сайту"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/web-ui.jpg"
+              alt="Програміст розробляє додаток на смартфон"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/creative.jpg"
+              alt="Дизайнер розробляє логотип"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/designer.jpg" alt="Дизайнер продукту" width="270" height="260" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/frontend.jpg" alt="Розробник інтерфейсу" width="270" height="260" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/marketing.jpg" alt="Маркетолог" width="270" height="260" />
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <a href="" class="logo">
-            <img src="./images/webstudio.jpg"
-            alt="Нижній логотип"
-            width="145"
-            />
-        </a>
-        <address>
-            м. Київ, пр-т Лесі Українки, 26
-        </address>
-        <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
-
-
+      <a href="" class="logo">
+        <img src="./images/webstudio.jpg" alt="Нижній логотип" width="145" />
+      </a>
+      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
     </footer>
-
-
-
-
- </body>
+  </body>
 </html>
- 
