Поправив код Команди

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
           </li>
           <li>
             <img src="./images/marketing.jpg" alt="Маркетолог" width="270" height="260" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/ui.jpg"
+              alt="Дизайнер інтерфейсу користувача"
+              width="270"
+              height="260"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
