--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a href="" class="logo">
-          <img src="./images/webstudio.jpg" alt="логотип WebStudio" width="145" />
-        </a>
+        <a href="">WebStudio</a>
         <ul class="menu">
           <li class="menu-nav">
             <a href="#">Студія</a>
@@ -33,6 +31,7 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section class="features">
+        <h2>Особливості</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -113,10 +112,15 @@
       </section>
     </main>
     <footer>
-      <a href="" class="logo">
-        <img src="./images/webstudio.jpg" alt="Нижній логотип" width="145" />
-      </a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <a href="" class="logo">WebStudio</a>
+      <address>
+        <a
+          href="https://www.google.com.ua/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4264658,30.5364282,16.75z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
+          target="_blank"
+          rel="noopener noreferrer"
+          >м. Київ, пр-т Лесі Українки, 26</a
+        >
+      </address>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
